# dfmt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: dformat.rs  format.rs  performance.rs
ensure_no_std/: Cargo.toml
ensure_no_std/.cargo/: config.toml
ensure_no_std/src/: main.rs
src/: argument.rs  arguments.rs  arguments_builder.rs  black_magic.rs  dyn_fmt.rs  error.rs  lib.rs  parser.rs  template.rs
src/macros/: deprint.rs  dformat.rs  dprint.rs  dwrite.rs  internal.rs  mod.rs
src/materials/: arguments.rs  arguments_builder.rs  dyn_fmt.rs  mod.rs  template.rs
src/values/: alignment.rs  argument_key.rs  argument_type_requirements.rs  argument_value.rs  mod.rs  piece.rs  precision.rs  specifier.rs  ty.rs  typed_value.rs  width.rs
tests/: dformat.rs  error.rs  format.rs
