[package]
name = "dfmt"
authors = ["Tom Dymel <tom@dymel.dev>"]
version = "0.1.0"
edition = "2018"
keywords = ["dynamic", "format", "template", "string", "arguments"]
categories = ["value-formatting", "text-processing"]
description = "A fully featured dynamic template drop in replacement for the format! macro."
readme = "README.md"
repository = "https://github.com/tdymel/dfmt"
documentation = "https://docs.rs/dfmt"
license = "MIT OR Apache-2.0"
exclude = [".github"]

[dependencies]

[dev-dependencies]

[[bench]]
name = "performance"
path = "benches/performance.rs"

[features]
nightly_formatting_options = []
std = []
default = ["std"]
