[package]
name = "dfmt"
authors = ["Tom Dymel <tom@dymel.dev>"]
version = "0.2.0"
edition = "2021"
keywords = ["dynamic", "format", "template", "string", "arguments"]
categories = [
    "value-formatting",
    "text-processing",
    "no-std",
    "template-engine",
]
description = "A fully featured dynamic template drop in replacement for the format! macro."
readme = "README.md"
repository = "https://github.com/tdymel/dfmt"
documentation = "https://docs.rs/dfmt"
license = "MIT OR Apache-2.0"
exclude = [".github", "ensure_no_std"]

[dependencies]

[dev-dependencies]

[[bench]]
name = "performance"
path = "benches/performance.rs"

[features]
nightly_formatting_options = []
std = []
default = ["std", "error"]
error = []
